--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.610.0",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "d3": "^5.7.0",
     "dagre": "^0.8.2",
@@ -49,6 +50,7 @@
     "react-list-input": "^1.1.0",
     "react-select": "^3.0.8",
     "react-select-item": "^3.1.0",
+    "react-tabs": "^3.1.0",
     "react-textarea-autosize": "^7.1.2",
     "react-tooltip-lite": "^1.11.2",
     "svg-intersections": "^0.4.0",
