--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-google-login": "^5.1.0",
     "react-helmet": "^5.2.1",
     "react-list-input": "^1.1.0",
+    "react-reflex": "^3.0.22",
     "react-select": "^3.0.8",
     "react-select-item": "^3.1.0",
     "react-tabs": "^3.1.0",
