--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-helmet": "^5.2.1",
     "react-list-input": "^1.1.0",
     "react-loader-spinner": "^3.1.14",
+    "react-outside-click-handler": "^1.3.0",
     "react-reflex": "^3.0.22",
     "react-select": "^3.0.8",
     "react-select-item": "^3.1.0",
